修正thymeleaf目录结构

--- a/src/main/resources/views/web/index.html
+++ b/src/main/resources/views/web/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>QmBootFramework</title>
+    <title>QmBootThymeleaf</title>
 </head>
 <body>
 <p>Hello developer</p>
